--- a/Home/index.html
+++ b/Home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="/Namanganliklar24/Home/news.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <section class="intro">
@@ -12,7 +12,7 @@
       <div class="header">
         <img
           class="logo"
-          src="/Namanganliklar24/Home/assets/logo.svg"
+          src="./assets/logo.svg"
           alt="NAMANGANLIKLAR24"
         />
 
@@ -23,7 +23,7 @@
         </div>
 
         <button class="tg_btn">
-          <img src="/Namanganliklar24/Home/assets/cib_telegram@2x.svg" alt="" />
+          <img src="./assets/cib_telegram@2x.svg1" alt="" />
           <a class="tg_btn_link" href="https://t.me/Vasantino"> Подписаться </a>
         </button>
       </div>
@@ -32,19 +32,19 @@
           <a class="categories">Узбекистана</a>
           <a class="categories">Мир</a>
           <a class="categories">Экономика</a>
-          <a href="/Namanganliklar24/Article/article.html" target="_blank"  class="categories">Политика</ф>
+          <a href="/Article/index.html" target="_blank"  class="categories">Политика</ф>
           <a class="categories">Общество</a>
           <a class="categories">Технологии</a>
           <a class="categories">Спорт</a>
           <a class="categories">Культура</a>
-          <a href="/Namanganliklar24/List/list.html" target="_blank"  class="categories">Происшествия</a>
+          <a href="/List/index.html" target="_blank"  class="categories">Происшествия</a>
           <a class="categories">Туризм</a>
       </div>
 
       <div class="banner">
         <img
           class="banner_img"
-          src="/Namanganliklar24/Home/assets/nrg-banner.png"
+          src="./assets/nrg-banner.png"
           alt=""
         />
       </div>
@@ -52,16 +52,16 @@
 
     <section class="covid-19">
       <div class="virus">
-        <img src="/Namanganliklar24/Home/assets/virus (1).svg" alt="" />
+        <img src="./assets/virus (1).svg" alt="" />
         <h4 class="covid_text">Коронавирус COVID-19 <br />в Узбекистане</h4>
       </div>
 
-      <img src="/Namanganliklar24/Home/assets/Rectangle 18.svg" alt="" />
+      <img src="./assets/Rectangle 18.svg" alt="" />
 
       <div class="sick">
         <img
           class="sick_img"
-          src="/Namanganliklar24/Home/assets/sick.svg"
+          src="./assets/sick.svg"
           alt=""
         />
         <span class="virus_text">
@@ -70,12 +70,12 @@
         </span>
       </div>
 
-      <img src="/Namanganliklar24/Home/assets/Rectangle 19.svg" alt="" />
+      <img src="./assets/Rectangle 19.svg" alt="" />
 
       <div class="healthy">
         <img
           class="healthy_img"
-          src="/Namanganliklar24/Home/assets/healthy.png"
+          src="./assets/healthy.png"
           alt=""
         />
         <span class="virus_text">
@@ -84,12 +84,12 @@
         </span>
       </div>
 
-      <img src="/Namanganliklar24/Home/assets/Rectangle 19.svg" alt="" />
+      <img src="./assets/Rectangle 19.svg" alt="" />
 
       <div class="died">
         <img
           class="died_img"
-          src="/Namanganliklar24/Home/assets/died.png"
+          src="./assets/died.png"
           alt=""
         />
         <span class="virus_text">
@@ -103,7 +103,7 @@
       <div class="prezident">
         <img
           class="president_img"
-          src="/Namanganliklar24/Home/assets/prezident.png"
+          src="./assets/prezident.png"
           alt=""
         />
         <h4 class="news_title">
@@ -116,7 +116,7 @@
       <div class="karantin">
         <img
           class="karantin_img"
-          src="/Namanganliklar24/Home/assets/karantin.png"
+          src="./assets/karantin.png"
           alt=""
         />
         <h4 class="news_title">Карантин в Узбекистане продлен до 1 июня</h4>
@@ -126,7 +126,7 @@
       <div class="sardoba">
         <img
           class="sardoba_img"
-          src="/Namanganliklar24/Home/assets/sardoba.png"
+          src="./assets/sardoba.png"
           alt=""
         />
         <h4 class="news_title">
@@ -139,7 +139,7 @@
       <div class="prokuror">
         <img
           class="prokuror_img"
-          src="/Namanganliklar24/Home/assets/prokuror.jpg"
+          src="./assets/prokuror.jpg"
           alt=""
         />
         <h4 class="news_title">
@@ -152,7 +152,7 @@
       <div class="tez_yordam">
         <img
           class="tez_yordam_img"
-          src="/Namanganliklar24/Home/assets/tez-yordam.jpg"
+          src="./assets/tez-yordam.jpg"
           alt=""
         />
         <h4 class="news_title">Выявлено еще 7 случаев коронавируса</h4>
@@ -162,7 +162,7 @@
       <div class="stop_karantin">
         <img
           class="stop_karantin_img"
-          src="/Namanganliklar24/Home/assets/stop-karantin.jpg"
+          src="./assets/stop-karantin.jpg"
           alt=""
         />
         <h4 class="news_title">Итоги второго месяца карантина</h4>
@@ -175,7 +175,7 @@
         <div class="ntf_left">
           <img
             class="bell_icon"
-            src="/Namanganliklar24/Home/assets/bell-icon@2x.png"
+            src="./assets/bell-icon@2x.png"
             alt=""
           />
           <h3 class="nft_text">
@@ -195,7 +195,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/desert.png"
+              src="./assets/desert.png"
               alt=""
             />
           </div>
@@ -212,7 +212,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="./assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -224,7 +224,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/president2.png"
+              src="./assets/president2.png"
               alt=""
             />
           </div>
@@ -243,7 +243,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="./assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -255,7 +255,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/traffic.png"
+              src="./assets/traffic.png"
               alt=""
             />
           </div>
@@ -272,7 +272,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="./assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -284,7 +284,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/desert.png"
+              src="./assets/desert.png"
               alt=""
             />
           </div>
@@ -301,7 +301,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="./assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -313,7 +313,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/president2.png"
+              src="./assets/president2.png"
               alt=""
             />
           </div>
@@ -332,7 +332,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="./assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -344,7 +344,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/traffic.png"
+              src="./assets/traffic.png"
               alt=""
             />
           </div>
@@ -361,7 +361,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="./assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -420,7 +420,7 @@
         </div>
 
         <div class="bottom_part">
-          <img class="ucell" src="/Namanganliklar24/Home/assets/Rectangle 41.png" alt="">
+          <img class="ucell" src="./assets/Rectangle 41.png" alt="">
         </div>
       </div>
     </section>
@@ -429,7 +429,7 @@
 
         <div class="downland_left">
           <div class="left_part">
-          <img src="/Namanganliklar24/Home/assets/phone_img.png" alt="">
+          <img src="./assets/phone_img.png" alt="">
           </div>
           <div class="right_part">
             <h3 class="right_title">Всегда будьте в курсе последних новостей!</h3>
@@ -438,8 +438,8 @@
         </div>
 
         <div class="downland_right">
-          <img class="downland_img" src="/Namanganliklar24/Home/assets/appstore 1.png" alt="">
-          <img class="downland_img" src="/Namanganliklar24/Home/assets/googleplay 1.png" alt="">
+          <img class="downland_img" src="./assets/appstore 1.png" alt="">
+          <img class="downland_img" src="./assets/googleplay 1.png" alt="">
         </div>
 
     </section>
@@ -450,7 +450,7 @@
 
         <div class="footer_above_right">
           <p class="text">Подписывайтесь на наш канал в Telegram и будьте всегда в курсе самых последних новостей:</p>
-          <button class="footer_btn"><img src="/Namanganliklar24/Home/assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
+          <button class="footer_btn"><img src="./assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
         </div>
       </div>
 
