--- a/Article/index.html
+++ b/Article/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article</title>
-    <link rel="stylesheet" href="/Namanganliklar24/Article/article.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section class="intro">
@@ -12,7 +12,7 @@
       <div class="header">
         <img
           class="logo"
-          src="/Namanganliklar24/Home/assets/logo.svg"
+          src="/Home/assets/logo.svg"
           alt="NAMANGANLIKLAR24"
         />
 
@@ -23,7 +23,7 @@
         </div>
 
         <button class="tg_btn">
-          <img src="/Namanganliklar24/News/assets/cib_telegram@2x.svg" alt="" />
+          <img src="/Home/assets/cib_telegram@2x.svg" alt="" />
           <a class="tg_btn_link" href="https://t.me/Vasantino"> Подписаться </a>
         </button>
       </div>
@@ -32,7 +32,7 @@
           <a class="categories">Узбекистана</a>
           <a class="categories">Мир</a>
           <a class="categories">Экономика</a>
-          <a href="/Namanganliklar24/List/list.html" target="_blank" target="_blank" class="categories">Политика</ф>
+          <a href="/List/index.html" target="_blank" target="_blank" class="categories">Политика</ф>
           <a class="categories">Общество</a>
           <a class="categories">Технологии</a>
           <a class="categories">Спорт</a>
@@ -44,7 +44,7 @@
       <div class="banner">
         <img
           class="banner_img"
-          src="/Namanganliklar24/Home/assets/nrg-banner.png"
+          src="/Home/assets/nrg-banner.png"
           alt=""
         />
       </div>
@@ -53,7 +53,7 @@
     <section claass="news">
       <div class="container">
         <div class="left_part">
-        <img src="/Namanganliklar24/Article/assets/president3.png" alt="">
+        <img src="/Article/assets/president3.png" alt="">
         <h4 class="left_title">19 мая состоялось видеоселекторное совещание, посвященное дополнительным мерам <br> поддержки предпринимательства.</h4>
         <p class="left_text">
         По данным пресс-службы главы государства, из-за пандемии в Узбекистане число бедных и <br> безработных увеличится, а доходы семей уменьшатся. На совещании обсуждены <br> дополнительные меры и приоритетные задачи в этом направлении.
@@ -123,7 +123,7 @@
         </div>
 
         <div class="bottom_part">
-          <img class="ucell" src="/Namanganliklar24/Home/assets/Rectangle 41.png" alt="">
+          <img class="ucell" src="/Home/assets/Rectangle 41.png" alt="">
         </div>
       </div>
       </div>
@@ -135,7 +135,7 @@
 
         <div class="footer_above_right">
           <p class="text">Подписывайтесь на наш канал в Telegram и будьте всегда в курсе самых последних новостей:</p>
-          <button class="footer_btn"><img src="/Namanganliklar24/Home/assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
+          <button class="footer_btn"><img src="/Home/assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
         </div>
       </div>
 
