--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="/Namanganliklar24/Contact/contact.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <section class="intro">
@@ -12,7 +12,7 @@
       <div class="header">
         <img
           class="logo"
-          src="/Namanganliklar24/Home/assets/logo.svg"
+          src="/Home/assets/logo.svg"
           alt="NAMANGANLIKLAR24"
         />
 
@@ -23,14 +23,14 @@
         </div>
 
         <button class="tg_btn">
-          <img src="/Namanganliklar24/Home/assets/cib_telegram@2x.svg" alt="" />
+          <img src="/Home/assets/cib_telegram@2x.svg" alt="" />
           <a class="tg_btn_link" href="https://t.me/Vasantino"> Подписаться </a>
         </button>
       </div>
 
       <div class="options">
         <a
-          href="/Namanganliklar24/Home/news.html"
+          href="/Home/news.html"
           target="_blank"
           class="categories"
           >Узбекистана</a
@@ -49,7 +49,7 @@
       <div class="banner">
         <img
           class="banner_img"
-          src="/Namanganliklar24/Home/assets/nrg-banner.png"
+          src="/Home/assets/nrg-banner.png"
           alt=""
         />
       </div>
@@ -89,7 +89,7 @@
 
         <div class="footer_above_right">
           <p class="text">Подписывайтесь на наш канал в Telegram и будьте всегда в курсе самых последних новостей:</p>
-          <button class="footer_btn"><img src="/Namanganliklar24/Home/assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
+          <button class="footer_btn"><img src="/Home/assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
         </div>
       </div>
 
