--- a/Home/index.html
+++ b/Home/index.html
@@ -12,7 +12,7 @@
       <div class="header">
         <img
           class="logo"
-          src="./assets/logo.svg"
+          src="/Home/assets/logo.svg"
           alt="NAMANGANLIKLAR24"
         />
 
@@ -445,7 +445,9 @@
     </section>
 
     <section class="footer">
-      <div class="footer_above_part">
+
+      <div class="footer_container">
+        <div class="footer_above_part">
         <p class="footer_logo">NAMANGANLIKLAR24</p>
 
         <div class="footer_above_right">
@@ -481,6 +483,7 @@
         </div>
         </div>
       </div>
+      
     </section>
   </body>
 </html>
