--- a/List/index.html
+++ b/List/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List</title>
-    <link rel="stylesheet" href="/Namanganliklar24/List/list.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section class="intro">
@@ -12,7 +12,7 @@
       <div class="header">
         <img
           class="logo"
-          src="/Namanganliklar24/Home/assets/logo.svg"
+          src="/Home/assets/logo.svg"
           alt="NAMANGANLIKLAR24"
         />
 
@@ -23,13 +23,13 @@
         </div>
 
         <button class="tg_btn">
-          <img src="/Namanganliklar24/Home/assets/cib_telegram@2x.svg" alt="" />
+          <img src="/Home/assets/cib_telegram@2x.svg" alt="" />
           <a class="tg_btn_link" href="https://t.me/Vasantino"> Подписаться </a>
         </button>
       </div>
 
       <div class="options">
-          <a href="/Namanganliklar24/Home/news.html" target="_blank" class="categories">Узбекистана</a>
+          <a href="./news.html" target="_blank" class="categories">Узбекистана</a>
           <a class="categories">Мир</a>
           <a class="categories">Экономика</a>
           <a class="categories">Политика</a>
@@ -44,7 +44,7 @@
       <div class="banner">
         <img
           class="banner_img"
-          src="/Namanganliklar24/Home/assets/nrg-banner.png"
+          src="/Home/assets/nrg-banner.png"
           alt=""
         />
       </div>
@@ -58,7 +58,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/desert.png"
+              src="/Home/assets/desert.png"
               alt=""
             />
           </div>
@@ -75,7 +75,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -87,7 +87,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/president2.png"
+              src="/Home/assets/president2.png"
               alt=""
             />
           </div>
@@ -106,7 +106,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -118,7 +118,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/traffic.png"
+              src="/Home/assets/traffic.png"
               alt=""
             />
           </div>
@@ -135,7 +135,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -147,7 +147,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/desert.png"
+              src="/Home/assets/desert.png"
               alt=""
             />
           </div>
@@ -164,7 +164,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -176,7 +176,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/president2.png"
+              src="/Home/assets/president2.png"
               alt=""
             />
           </div>
@@ -195,7 +195,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -207,7 +207,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/traffic.png"
+              src="/Home/assets/traffic.png"
               alt=""
             />
           </div>
@@ -224,7 +224,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -236,7 +236,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/traffic.png"
+              src="/Home/assets/traffic.png"
               alt=""
             />
           </div>
@@ -253,7 +253,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -265,7 +265,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/desert.png"
+              src="/Home/assets/desert.png"
               alt=""
             />
           </div>
@@ -282,7 +282,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -294,7 +294,7 @@
           <div class="news2_left">
             <img
               class="news2_img"
-              src="/Namanganliklar24/Home/assets/president2.png"
+              src="/Home/assets/president2.png"
               alt=""
             />
           </div>
@@ -313,7 +313,7 @@
             <div class="news2_rigth_sbt">
               <img
                 class="date_img"
-                src="/Namanganliklar24/Home/assets/date_img.svg"
+                src="/Home/assets/date_img.svg"
                 alt=""
               />
               <p class="date">11:31 / 15.05.2020</p>
@@ -372,7 +372,7 @@
         </div>
 
         <div class="bottom_part">
-          <img class="ucell" src="/Namanganliklar24/Home/assets/Rectangle 41.png" alt="">
+          <img class="ucell" src="/Home/assets/Rectangle 41.png" alt="">
         </div>
       </div>
     </section>
@@ -383,7 +383,7 @@
 
         <div class="footer_above_right">
           <p class="text">Подписывайтесь на наш канал в Telegram и будьте всегда в курсе самых последних новостей:</p>
-          <button class="footer_btn"><img src="/Namanganliklar24/Home/assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
+          <button class="footer_btn"><img src="/Home/assets/cib_telegram.png" alt=""><a class="footer_btn_link" href="https://t.me/Vasantino">Подписаться</a></button>
         </div>
       </div>
 
