--- a/Home/index.html
+++ b/Home/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <button class="tg_btn">
-          <img src="./assets/cib_telegram@2x.svg1" alt="" />
+          <img src="/Home/assets/cib_telegram@2x.svg1" alt="" />
           <a class="tg_btn_link" href="https://t.me/Vasantino"> Подписаться </a>
         </button>
       </div>
